<resources>
    <string name="firstname_hint">first name</string>
    <string name="lastname_hint">last name</string>
    <string name="emailname_hint">email</string>
    <string name="age_hint">age</string>
    <string name="add_text">add</string>
    <string name="remove_text">remove</string>
    <string name="update_text">update</string>
    <string name="active_numebr">active members: </string>
    <string name="nonactive_numebr">non-active members: </string>



</resources>