<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_svg_background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstname"
        android:padding="10dp"
        android:hint="@string/firstname_hint"
        android:layout_margin="20dp"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastname"
        android:padding="10dp"
        android:hint="@string/lastname_hint"
        android:layout_margin="20dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/firstname"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailname"
        android:padding="10dp"
        android:hint="@string/emailname_hint"
        android:layout_margin="20dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/lastname"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/age"
        android:padding="10dp"
        android:hint="@string/age_hint"
        android:layout_margin="20dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/emailname"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/add_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/remove"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/remove_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/update"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/update_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="109dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="@+id/add"
        app:layout_constraintEnd_toStartOf="@+id/remove"
        app:layout_constraintTop_toBottomOf="@+id/age"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/active"
        android:inputType="text"
        android:hint="@string/active_numebr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add"
        android:layout_margin="20dp"

    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activeNum"
        app:layout_constraintStart_toEndOf="@+id/active"
        app:layout_constraintTop_toBottomOf="@+id/add"
        android:layout_margin="20dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/nonactive"
        android:hint="@string/nonactive_numebr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/active"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/nonActiveNum"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/nonactive"
        app:layout_constraintTop_toBottomOf="@+id/active"
        android:layout_margin="20dp"

        />
</androidx.constraintlayout.widget.ConstraintLayout>